// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChangeGroupsComp > helpers > getChangeGroupsMarkup > should return ChangeGroupsComp markup w/ container 1`] = `
<div
  className="_groups_container_44aef7"
  data-spec="content"
>
  <div
    className="_node_asset_9658e1"
  >
    <React.Fragment>
      <ForwardRef
        className="_icon_25b42d"
        icon="single-neutral-actions-1"
        scheme="neutral-dark"
        size="avatar-nano"
      />
      <span
        className="_link_25b42d _truncated_25b42d"
      >
        Early Adopters
      </span>
    </React.Fragment>
  </div>
  <div
    className="_node_asset_9658e1"
  >
    <React.Fragment>
      <ForwardRef
        className="_icon_25b42d"
        icon="single-neutral-actions-1"
        scheme="neutral-dark"
        size="avatar-nano"
      />
      <span
        className="_link_25b42d _truncated_25b42d"
      >
        Testers
      </span>
    </React.Fragment>
  </div>
  <div
    className="_node_asset_9658e1"
  >
    <React.Fragment>
      <ForwardRef
        className="_icon_25b42d"
        icon="single-neutral-actions-1"
        scheme="neutral-dark"
        size="avatar-nano"
      />
      <span
        className="_link_25b42d _truncated_25b42d"
      >
        Subscribers
      </span>
    </React.Fragment>
  </div>
  <div
    className="_node_asset_9658e1"
  >
    <React.Fragment>
      <ForwardRef
        className="_icon_25b42d"
        icon="single-neutral-actions-1"
        scheme="neutral-dark"
        size="avatar-nano"
      />
      <span
        className="_link_25b42d _truncated_25b42d"
      >
        Champions
      </span>
    </React.Fragment>
  </div>
</div>
`;

exports[`ChangeGroupsComp > helpers > getContentMarkup > should return list of elements that contains remove-all markup 1`] = `
[
  <div
    data-spec="remove_from_all"
  >
    Remove from all groups
  </div>,
]
`;

exports[`ChangeGroupsComp > helpers > getContentMarkup > should return list of group elements 1`] = `
[
  <div
    className="_node_asset_9658e1"
  >
    <React.Fragment>
      <ForwardRef
        className="_icon_25b42d"
        icon="single-neutral-actions-1"
        scheme="neutral-dark"
        size="avatar-nano"
      />
      <span
        className="_link_25b42d _truncated_25b42d"
      >
        Early Adopters
      </span>
    </React.Fragment>
  </div>,
  <div
    className="_node_asset_9658e1"
  >
    <React.Fragment>
      <ForwardRef
        className="_icon_25b42d"
        icon="single-neutral-actions-1"
        scheme="neutral-dark"
        size="avatar-nano"
      />
      <span
        className="_link_25b42d _truncated_25b42d"
      >
        Testers
      </span>
    </React.Fragment>
  </div>,
  <div
    className="_node_asset_9658e1"
  >
    <React.Fragment>
      <ForwardRef
        className="_icon_25b42d"
        icon="single-neutral-actions-1"
        scheme="neutral-dark"
        size="avatar-nano"
      />
      <span
        className="_link_25b42d _truncated_25b42d"
      >
        Subscribers
      </span>
    </React.Fragment>
  </div>,
  <div
    className="_node_asset_9658e1"
  >
    <React.Fragment>
      <ForwardRef
        className="_icon_25b42d"
        icon="single-neutral-actions-1"
        scheme="neutral-dark"
        size="avatar-nano"
      />
      <span
        className="_link_25b42d _truncated_25b42d"
      >
        Champions
      </span>
    </React.Fragment>
  </div>,
]
`;

exports[`ChangeGroupsComp > helpers > getRemoveAllMarkup > should return remove-all markup 1`] = `
<div
  data-spec="remove_from_all"
>
  Remove from all groups
</div>
`;

exports[`ChangeGroupsComp > render > should limit div to max number of groups 1`] = `ShallowWrapper {}`;

exports[`ChangeGroupsComp > render > should render 'remove from all' markup when passed group action of type Types.remove_contact_groups 1`] = `ShallowWrapper {}`;

exports[`ChangeGroupsComp > render > should render group name 1`] = `ShallowWrapper {}`;
